# heritage-uq

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: datasets.json
experiments/: campaign_summary.json
experiments/exp001_dataset_acquisition/: asset_manifest.csv  summary.json
experiments/exp002_controlled_degradation/: degradation_metrics.csv  monotonicity.csv  summary.json
experiments/exp003_ch3d_quality_calibration/: metric_correlations.csv  site_disjoint_predictions.csv  summary.json
experiments/exp004_lrm_reconstruction/: README.md  reference_quality.csv  summary.json  view_consistency.csv
experiments/exp005_real_data_robustness/: input_manifest.csv  summary.json
experiments/exp006_uncertainty_analysis/: aggregate_sensitivity.csv  mesh_structure.csv  perturbation_sensitivity.csv  summary.json
experiments/exp007_hallucination_localization/: aggregate_localization.csv  summary.json  (+1 more)
scripts/: 001_acquire_smithsonian.py  002_controlled_degradation.py  003_ch3d_quality_calibration.py  004_render_inputs.py  005_run_triposr_batch.py  006_evaluate_lrm_reconstruction.py  007_overnight_real_data_matrix.py  008_analyze_overnight_matrix.py  009_overnight_pipeline.py  010_hallucination_localization.py  011_external_holdout_matrix.py  012_wait_and_finish.py  013_analyze_external_holdout.py  014_finalize_campaign.py  015_wait_and_finalize.py  016_cross_dataset_calibration.py  018_refresh_model_provenance.py  019_restore_development_inputs.py  020_render_qualitative_case.py  021_regenerate_publication_figures.py
tests/: test_outputs.py
(+8 files in other folders)
