[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-aware-3d-heritage"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib==3.10.8",
  "numpy==1.26.4",
  "openpyxl==3.1.5",
  "pandas==2.3.3",
  "requests==2.32.5",
  "scipy==1.17.1",
  "trimesh==4.7.4",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2", "ruff==0.12.2"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
